minor edits and image optimization

--- a/mcp/tool-design/designing-rag-tools-for-llms/index.mdx
+++ b/mcp/tool-design/designing-rag-tools-for-llms/index.mdx
@@ -284,7 +284,7 @@ With Gram, you will upload the OpenAPI document from the project you cloned, con
 
 - Create a toolset named `Docs-Api-Rag` and enable the tools you need.
 
-  ![CleanShot 2025-10-22 at 06.18.33](/Users/koladev/ritza/speakeasy-developer-docs/mcp/tool-design/designing-rag-tools-for-llms/assets/CleanShot 2025-10-22 at 06.18.33.png)
+  ![Gram toolset creation](./assets/gram-toolset-creation.png)
 
 - In the [**Auth** tab](https://docs.getgram.ai/concepts/environments), set `DOCS_API_SERVER_URL` to the URL of your internal tool API. If you're following this guide with the local RAG MCP API, expose the API with [ngrok](https://ngrok.com/) by running the `ngrok http 127.0.0.1:8000` command and using the forwarding URL to fill in the `DOCS_API_SERVER_URL` variable.
 - In **Settings**, create a [Gram API key](https://docs.getgram.ai/concepts/api-keys).
@@ -295,11 +295,11 @@ In your Docs-Api-Rag toolset's MCP tab, click on the **View** button under the M
 
 Copy the raw configuration details. 
 
-![Raw configurations](/Users/koladev/ritza/speakeasy-developer-docs/mcp/tool-design/designing-rag-tools-for-llms/assets/CleanShot 2025-10-22 at 06.22.11.png)
+![Gram raw configuration](./assets/gram-raw-configuration.png)
 
 Open the Claude Desktop application, navigate to **Settings -> Developer**, and click **Edit Config**.
 
-![Edit config](/Users/koladev/ritza/speakeasy-developer-docs/mcp/tool-design/designing-rag-tools-for-llms/assets/claude-desktop-edit-config.png)
+![Claude Desktop edit config](./assets/claude-desktop-edit-config.png)
 
 Open the `claude_desktop_config.json` file, copy the raw configuration from Gram, and replace the value of `GRAM_ENVIRONMENT` with `default` or the name of the environment you are storing the environment variables, and `GRAM_KEY` with the Gram key.
 
@@ -313,11 +313,11 @@ Hi Claude. What's new in Django 5.2, mostly Django GIS? Are curved geometries su
 
 Claude will first use the MCP Rag tool to make a search and then reply. 
 
-![Result of search](/Users/koladev/ritza/speakeasy-developer-docs/mcp/tool-design/designing-rag-tools-for-llms/assets/CleanShot 2025-10-22 at 06.27.55.png)
+![Claude RAG search result](./assets/claude-rag-search-result.png)
 
 If you disable the tool, but also search and ask the question again, you can see Claude saying he is not sure about the response or the existence. 
 
-![Claude saying about his knowledge cutoff in january 2025](/Users/koladev/ritza/speakeasy-developer-docs/mcp/tool-design/designing-rag-tools-for-llms/assets/CleanShot 2025-10-22 at 06.29.14.png)
+![Claude knowledge cutoff response](./assets/claude-knowledge-cutoff-response.png)
 
 ## Final thoughts
 
