--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -20,7 +20,7 @@ import { DocsHeaderIndex } from "@/components/nextra/docs/docs-header-index";
   <section>
     <h2 className="bsmnt-text-heading-md">Idiomatic SDKs</h2>
     <div className="bsmnt-text-body-lg text-muted-foreground mt-2.5">
-      Supported generation languages
+      Supported generation languages TEST
     </div>
     <TechCards className="mt-5" items={cards.idiomaticSdks} />
   </section>
